# libr0

./: .gitignore  01-option.md  02-result.md  03-box.md  03.5-vec.md  04-cell.md  04-vec.md  05-cell.md  Cargo.toml  README.md
docs/: 01-option.md  02-result.md  03-box.md  04-vec.md  05-cell.md  appendix-closures.md  appendix-memory-layout.md  appendix-sized.md
examples/: 01_option.rs  02_result.rs  03_box.rs  04_cell.rs  04_vec.rs  05_cell.rs  common.rs
src/: box.rs  cell.rs  lib.rs  option.rs  rc.rs  refcell.rs  result.rs  vec.rs
